# pacrs

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  build.rs  install.sh  justfile
completions/: bash  fish  zsh
src/: alpm.rs  args.rs  aur.rs  clean.rs  cli.rs  cmd.rs  cmds.rs  command.rs  completions.rs  files.rs  lib.rs  main.rs  pacman.rs  pacrs.rs  ps.rs  temp_db.rs  utils.rs
