[package]
name = "pacrs"
version = "0.3.0"
edition = "2024"

description = "pacman wrapper with CLI inspired by zypper and apt"
license = "GPL-3.0-only"
keywords = ["archlinux", "arch", "pacman", "aur", "zypper", "apt"]

[dependencies]
# UI
clap = { version = "4.5.29", features = ["derive", "cargo", "wrap_help"] }
tabled = "0.18.0"

# Pacman
alpm = "4.0.2"
alpm-utils = "4.0.1"
pacmanconf = "3.0.0"

# System
which = "7.0.2"
nix = { version = "0.29.0", features = ["user"] }
dirs = "6.0.0"
sysinfo = "0.33.1"

# Error handleing
fs-err = "3.1.0"
anyhow = "1.0.95"
thiserror = "2.0.11"

# Utils
map-self = "0.1.0"
derive_more = { version = "2.0.1", features = ["deref"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
