[package]
name = "pacrs"
version = "0.3.0"
edition = "2024"

description = "pacman wrapper with CLI inspired by zypper and apt"
license = "GPL-3.0-only"
keywords = ["archlinux", "arch", "pacman", "aur", "zypper", "apt"]

[dependencies]
# UI
clap = { version = "4.5.39", features = ["derive", "cargo", "wrap_help"] }
tabled = "0.19.0"

# Pacman
alpm = "4.0.3"
alpm-utils = "4.0.1"
pacmanconf = "3.0.0"

# System
which = "7.0.3"
nix = { version = "0.29.0", features = ["user"] }
sysinfo = "0.34.2"
etcetera = "0.10.0"

# Error handleing
fs-err = "3.1.0"
anyhow = "1.0.98"
thiserror = "2.0.12"

# Utils
derive_more = { version = "2.0.1", features = ["deref"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
