[package]
name = "pacrs"
version = "0.3.0"
edition = "2024"

description = "pacman wrapper with CLI inspired by zypper and apt"
license = "GPL-3.0-only"
keywords = ["archlinux", "arch", "pacman", "aur", "zypper", "apt"]

[build-dependencies]
clap = { version = "4.5.45", features = ["derive", "cargo"] }
clap_complete = "4.5.57"

[dependencies]
# UI
clap = { version = "4.5.45", features = ["derive", "cargo", "wrap_help"] }
tabled = "0.20.0"
owo-colors = "4.2.2"

# Pacman
alpm = "4.0.3"
alpm-utils = "4.0.1"
pacmanconf = "3.0.0"

# System
which = "8.0.0"
nix = { version = "0.30.1", features = ["user"] }
sysinfo = "0.37.0"
etcetera = "0.10.0"

# Error handleing
fs-err = "3.1.1"
anyhow = "1.0.99"
thiserror = "2.0.15"

# Logging
log = "0.4.27"
env_logger = "0.11.8"

# Utils
derive_more = { version = "2.0.1", features = ["deref", "display"] }
regex = "1.11.1"
bytesize = "2.0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"


[lints.clippy]
pedantic = "warn"
